# botnexhealth

./: .dockerignore  .env.example  .gitignore  .graphifyignore  .mcp.json  CAMPAIGN_WORKFLOW_DEEP_DIVE.md  CLAUDE.md  Dockerfile  Makefile  README.md  REPORT_MULTIPROVIDER_ARCHITECTURE.md  alembic.ini  api_schemas_log.txt  botnexhealth.code-workspace  check_db.py  docker-compose.dev.yml  docker-compose.init-ssl.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.ssl.yml  docker-compose.yml  implementation_plan.md  openapi.json  openapi_v2.json  pyproject.toml  pytest.ini  render.yaml  system_prompt.md  task.md  test_slots_curl.sh
.claude/: CLAUDE.md  settings.json
alembic/: env.py
confirm_phase2/: CONFIRMATION_MECHANISM_OPTIONS.md  CONTINUATION_PROMPT.md  INBOUND_ROUTING_AND_SPOKEN_OPTOUT_REPORT.md
docs/: AGENT_PROMPT.md  API_REFERENCE.md  ARCHITECTURE.md  AUTH_INTEGRATION.md  CDK_ECS_DEPLOYMENT.md  COMPETITIVE_ANALYSIS.md  DEPLOYMENT.md  DEPLOYMENT_AND_HIPAA_GUIDE.md  DNS_DELEGATION.md  ENVIRONMENT.md  FRONTEND_INVITE_FLOW.md  HIPAA_COMPLIANCE_SCOPE.md  IMPLEMENTATION_STATUS_V1.md  LOCATION_API.md  MULTI_LOCATION.md  NEXHEALTH.md  NEXHEALTH_ENDPOINT_AUDIT.md  NEXHEALTH_MULTITENANCY_AND_EXPANSION_ENDPOINTS.md  OUTBOUND_ENGAGEMENT_IMPLEMENTATION_PLAN.md  PHASE2_CANONICAL_CALL_LOG_MIGRATION_SPEC.md  PMS_SUPPORT_IMPACT_NEXHEALTH_ENDPOINTS.md  PRINCIPAL_REVIEW.md  PRODUCTION.md  PRODUCT_OVERVIEW.md  PROJECT.md  REPOSITORY_CONTEXT.md  RETELL_LOOKUP_PATIENT_WORKFLOW.md  RETELL_SCHEMAS.md  ROADMAP_OUTBOUND_ENGAGEMENT.md  SCHEDULED_JOBS.md  SECURITY.md  SECURITY_REVIEW_FINDINGS.md  SPRINT_PLAN_JUNIOR_SENIOR.md  STAGING_DOMAIN_SETUP.md  TENANT_API.md  client-facing-architecture.md  universal-pms-adapter-plan.md
infra/: README.md  app.py  cdk.context.json
nexus-dashboard-web/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: delete_user_and_location_aws.sh  (+8 more)
(+913 files in other folders)
