[project]
name = "nexhealth-voice-agent-backend"
version = "0.1.0"
description = "FastAPI backend for a HIPAA-minded NexHealth voice agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "pydantic>=2.0",
  "pydantic-settings>=2.2",
  "uvicorn[standard]>=0.29",
  "retell-sdk>=4.0",
  "gunicorn>=21.0",
  # Database (multi-tenant)
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "greenlet>=3.0",
  # Encryption (HIPAA)
  "cryptography>=42.0",
  # Database migrations
  "alembic>=1.13",
  "argon2-cffi>=23.1.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "supabase>=2.0.0",
  "celery>=5.3.0",
  "redis>=5.0.0",
  # Email template rendering
  "Jinja2>=3.1",
  # Rate limiting (HIPAA)
  "slowapi>=0.1.9",
  # Twilio SMS
  "twilio>=9.0",
  "phonenumbers>=8.13",
  # AWS S3 (call recordings)
  "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.3",
  "pyngrok>=7.1",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
